unpackaged/main/default/objects/EskerSettings__c/EskerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Esker Integration Settings</label>
</CustomObject>