unpackaged/main/default/objects/EskerSettings__c/fields/Auto_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Trigger_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether trigger on new email messages is enabled.</description>
    <label>Auto Trigger Enabled</label>
    <type>Checkbox</type>
</CustomField>