unpackaged/main/default/objects/EskerSettings__c/fields/Esker_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Esker_Notification_Email__c</fullName>
    <description>Email address to Esker System to receive email messages</description>
    <label>Esker Notification Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>