unpackaged/main/default/objects/EskerSettings__c/fields/Global_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Global_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the global shutdown switch. Setting to off will disable all integrations with Esker</description>
    <label>Global Enabled</label>
    <type>Checkbox</type>
</CustomField>